--- a/components/Billboard/Billboard.module.css
+++ b/components/Billboard/Billboard.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 90vw;
   max-width: 1200px;
+  padding: 20px 0;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
