--- a/components/Schedule/Schedule.module.css
+++ b/components/Schedule/Schedule.module.css
@@ -2,12 +2,45 @@
   display: flex;
   flex-direction: column;
 
+  &__days {
+    display: flex;
+    gap: 5px;
+    margin: 10px 0;
+  }
+
+  &__hours {
+    width: 500px;
+    height: 500px;
+    border: 1px solid gray;
+
+    &__header {
+      background-color: gray;
+      width: 100%;
+      padding: 20px;
+      text-transform: lowercase;
+      font-size: 18px;
+    }
+
+    &__type {
+      border: 1px solid gray;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      &__buttons {
+        display: flex;
+        gap: 5px;
+      }
+    }
+  }
+
   &__button {
     width: fit-content;
     background: none;
     padding: 10px 15px;
     border: 1px solid gray;
-    border-radius: 15px;
+    border-radius: 10px;
     color: gray;
 
     &__selected {
