--- a/components/Billboard/Billboard.module.css
+++ b/components/Billboard/Billboard.module.css
@@ -2,39 +2,68 @@
   width: 90vw;
   max-width: 1200px;
   padding: 20px 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
   margin: auto;
-  overflow: hidden;
 
-  &__movie {
-    height: 350px;
-    transition: 0.2s;
-    cursor: pointer;
-
-    &:active {
-      scale: 0.95;
-    }
-
-    @media (--large) {
-      &:hover {
-        scale: 1.05;
-      }
-
-      &:active {
-        scale: 1;
-      }
-    }
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 
     & h1 {
-      width: fit-content;
-      text-align: center;
-      max-width: 180px;
+      color: gray;
       font-weight: lighter;
-      font-size: 14px;
-      margin: 15px auto;
+    }
+
+    & button {
+      background-color: #282828;
+      font-weight: bold;
+      padding: 10px;
+      border-radius: 10px;
+      color: white;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      transition: 0.2s;
+      opacity: 0.5;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__peliculas {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    &__movie {
+      height: 350px;
+      transition: 0.2s;
+      cursor: pointer;
+
+      &:active {
+        scale: 0.95;
+      }
+
+      @media (--large) {
+        &:hover {
+          scale: 1.05;
+        }
+
+        &:active {
+          scale: 1;
+        }
+      }
+
+      & h1 {
+        width: fit-content;
+        text-align: center;
+        max-width: 180px;
+        font-weight: lighter;
+        font-size: 14px;
+        margin: 15px auto;
+      }
     }
   }
 }
