--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -6,10 +6,11 @@
     width: 90vw;
     margin: auto;
     max-width: 1200px;
-    height: 60px;
+    padding: 30px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 
     & a {
       text-decoration: underline;
