--- a/components/Schedule2/Schedule2.module.css
+++ b/components/Schedule2/Schedule2.module.css
@@ -1,5 +1,52 @@
 .container {
-  & button {
-    color: white;
+  display: flex;
+  width: 90vw;
+  max-width: 1200px;
+  margin: auto;
+  position: relative;
+
+  &__schedule {
+    width: 50vw;
+
+    &__closeBtnContainer {
+      position: absolute;
+      top: 10px;
+      right: 40px;
+    }
+
+    &__funciones {
+      background-color: #111111;
+    }
+  }
+}
+
+.modal {
+  padding: 50px 0;
+  background-color: white;
+  color: black;
+  text-align: center;
+  position: relative;
+
+  &__close_btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    border-color: gray;
+    border-radius: 50%;
+  }
+
+  & p {
+    margin: 10px auto;
+    width: 60%;
+    color: gray;
+  }
+
+  & hr {
+    width: 80%;
+    margin: 50px auto 30px auto;
   }
 }
