--- a/components/Schedule2/Schedule2.module.css
+++ b/components/Schedule2/Schedule2.module.css
@@ -27,16 +27,10 @@
   text-align: center;
   position: relative;
 
-  &__close_btn {
+  &__closeBtnContainer {
     position: absolute;
     top: 10px;
     right: 10px;
-    background: none;
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    border-color: gray;
-    border-radius: 50%;
   }
 
   & p {
