--- a/components/Select/Select.module.css
+++ b/components/Select/Select.module.css
@@ -1,29 +1,18 @@
 .container {
-  color: gray;
+  color: white;
   text-transform: uppercase;
-  border: 1px solid gray;
-  border-radius: 15px;
+  border: 1px solid white;
+  border-radius: 8px;
   padding: 10px;
+  background-color: black;
+  appearance: none;
+  font-weight: bolder;
+  width: 300px;
+  position: relative;
 
-  &__active {
+  &__isActive {
     background-color: white;
     border-color: white;
     color: black;
-  }
-
-  &__isBuyButton {
-    opacity: 0.5;
-    background-color: white;
-    border-color: white;
-    color: black;
-    pointer-events: none;
-  }
-
-  &__isCloseButton {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 }
