--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -4,6 +4,7 @@
   border: 1px solid gray;
   border-radius: 15px;
   padding: 10px;
+  width: min-content;
 
   &__isActive {
     background-color: white;
