--- a/components/Schedule/Schedule.module.css
+++ b/components/Schedule/Schedule.module.css
@@ -1,70 +1,22 @@
 .container {
   display: flex;
-  flex-direction: column;
+  width: 90vw;
+  max-width: 1200px;
+  margin: auto;
+  position: relative;
 
-  &__days {
-    display: flex;
-    gap: 5px;
-    margin: 10px 0;
-  }
+  &__schedule {
+    width: 50vw;
 
-  &__hours {
-    width: 500px;
-    height: 500px;
-    border: 1px solid gray;
-
-    &__header {
-      background-color: gray;
-      width: 100%;
-      padding: 20px;
-      text-transform: lowercase;
-      font-size: 18px;
+    &__closeBtnContainer {
+      position: absolute;
+      top: 10px;
+      right: 40px;
     }
 
-    &__type {
-      border: 1px solid gray;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-
-      &__buttons {
-        display: flex;
-        gap: 5px;
-      }
+    &__funciones {
+      background-color: #111111;
     }
-  }
-
-  &__button {
-    width: fit-content;
-    background: none;
-    padding: 10px 15px;
-    border: 1px solid gray;
-    border-radius: 10px;
-    color: gray;
-
-    &__selected {
-      background-color: white;
-      color: black;
-      border-color: white;
-    }
-  }
-}
-
-.buy_button {
-  border-radius: 15px;
-  width: 200px;
-  height: 45px;
-  font-weight: bold;
-  border: none;
-  color: black;
-  background-color: yellow;
-  pointer-events: all;
-
-  &__disabled {
-    color: gray;
-    background-color: white;
-    pointer-events: none;
   }
 }
 
@@ -75,16 +27,10 @@
   text-align: center;
   position: relative;
 
-  &__close_btn {
+  &__closeBtnContainer {
     position: absolute;
     top: 10px;
     right: 10px;
-    background: none;
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    border-color: gray;
-    border-radius: 50%;
   }
 
   & p {
@@ -97,9 +43,4 @@
     width: 80%;
     margin: 50px auto 30px auto;
   }
-}
-
-& button,
-& select {
-  cursor: pointer;
 }
