--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -5,6 +5,8 @@
   border-radius: 15px;
   padding: 10px;
   width: min-content;
+  cursor: pointer;
+  transition: 0.2s;
 
   &__isActive {
     background-color: white;
