--- a/components/Schedule/Schedule.module.css
+++ b/components/Schedule/Schedule.module.css
@@ -1,21 +1,79 @@
 .container {
   display: flex;
+  flex-direction: column;
+  gap: 15px;
   width: 90vw;
   max-width: 1200px;
   margin: auto;
-  position: relative;
 
-  &__schedule {
-    width: 50vw;
+  &__dias {
+    display: flex;
+    gap: 5px;
+  }
+
+  &__funciones {
+    height: 550px;
+    min-height: 550px;
+    background-color: #111111;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
 
     &__closeBtnContainer {
       position: absolute;
       top: 10px;
-      right: 40px;
+      right: 10px;
     }
 
-    &__funciones {
-      background-color: #111111;
+    &__funcion {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      height: 100%;
+      padding-bottom: 20px;
+
+      &__scroll {
+        overflow-y: scroll;
+        width: 100%;
+        height: 430px;
+        background-color: black;
+
+        /* &::-webkit-scrollbar {
+          width: 3px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: white;
+        } */
+
+        &__title {
+          text-transform: uppercase;
+          background-color: #434343;
+          width: 100%;
+          font-size: 14px;
+          padding: 15px;
+        }
+
+        &__tipo {
+          padding: 20px 15px;
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          border-bottom: 3px solid #111111;
+
+          & h2 {
+            font-size: 16px;
+          }
+
+          &__horarios {
+            display: flex;
+            gap: 5px;
+          }
+        }
+      }
     }
   }
 }
