--- a/components/SelectSeats/SelectSeats.module.css
+++ b/components/SelectSeats/SelectSeats.module.css
@@ -1,27 +1,72 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  &__fila {
-    display: flex;
-    list-style: none;
-    gap: 5px;
+  align-items: center;
+  gap: 30px;
+  color: black;
+  width: fit-content;
 
-    & li {
-      width: 20px;
-      height: 20px;
-      text-align: center;
-      cursor: pointer;
+  &__closeBtn {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+  }
+
+  &__titulo {
+    margin: auto;
+    width: 300px;
+    position: relative;
+
+    &::before {
+      content: " ";
+      display: block;
+      left: calc(50%);
+      transform: translateX(-50%);
+      width: 290px;
+      height: 30px;
+      border: 3px solid black;
+      border-radius: 100%;
+      position: absolute;
+      top: -15px;
+      z-index: 0;
     }
 
-    &__asiento {
-      background-color: white;
-      border: gray;
-      border-radius: 0 0 5px 5px;
-      transition: 0.2s;
+    & h2 {
+      position: relative;
+      padding-top: 10px;
+      text-align: center;
+      font-size: 20px;
+      background-color: #e6e6e6;
+      z-index: 1;
+    }
+  }
 
-      &:hover {
-        background-color: yellow !important;
+  &__asientos {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    &__fila {
+      display: flex;
+      list-style: none;
+      gap: 5px;
+
+      & li {
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        cursor: pointer;
+      }
+
+      &__asiento {
+        background-color: white;
+        border: gray;
+        border-radius: 0 0 5px 5px;
+        transition: 0.2s;
+
+        &:hover {
+          background-color: yellow !important;
+        }
       }
     }
   }
