--- a/components/SelectSeats/SelectSeats.module.css
+++ b/components/SelectSeats/SelectSeats.module.css
@@ -71,3 +71,28 @@
     }
   }
 }
+
+.modal {
+  padding: 50px 0;
+  background-color: white;
+  color: black;
+  text-align: center;
+  position: relative;
+
+  &__closeBtnContainer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
+  & p {
+    margin: 10px auto;
+    width: 60%;
+    color: gray;
+  }
+
+  & hr {
+    width: 80%;
+    margin: 50px auto 30px auto;
+  }
+}
