--- a/components/LoginComponent/LoginComponent.module.css
+++ b/components/LoginComponent/LoginComponent.module.css
@@ -1,8 +1,17 @@
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
   justify-content: center;
   color: black;
   margin: 100px 0;
+
+  @media (--large) {
+    flex-direction: row;
+    align-items: initial;
+    gap: 0;
+  }
 
   & button {
     margin-top: 20px;
@@ -58,6 +67,15 @@
 
   &__create {
     height: fit-content;
-    border-left: 2px solid #cacaca;
+    border-top: 2px solid #cacaca;
+    text-align: center;
+    padding-top: 30px;
+
+    @media (--large) {
+      border-top: none;
+      border-left: 2px solid #cacaca;
+      text-align: initial;
+      padding-top: 0;
+    }
   }
 }
