--- a/components/Schedule/Schedule.module.css
+++ b/components/Schedule/Schedule.module.css
@@ -8,17 +8,27 @@
 
   &__dias {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 5px;
+
+    @media (--large) {
+      justify-content: initial;
+    }
   }
 
   &__funciones {
-    height: 550px;
-    min-height: 550px;
+    display: flex;
+    flex-direction: column;
     background-color: #111111;
     padding: 15px;
-    display: flex;
-    justify-content: space-between;
     position: relative;
+
+    @media (--large) {
+      min-height: 550px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
     &__closeBtnContainer {
       position: absolute;
@@ -27,19 +37,28 @@
     }
 
     &__funcion {
-      width: 50%;
       display: flex;
       flex-direction: column;
+      gap: 20px;
       align-items: center;
       justify-content: space-between;
       height: 100%;
-      padding-bottom: 20px;
+
+      @media (--large) {
+        width: 50%;
+        gap: 0;
+        padding-bottom: 20px;
+      }
 
       &__scroll {
         overflow-y: scroll;
         width: 100%;
-        height: 430px;
+        height: 300px;
         background-color: black;
+
+        @media (--large) {
+          height: 430px;
+        }
 
         /* &::-webkit-scrollbar {
           width: 3px;
@@ -78,6 +97,8 @@
 }
 
 .modal {
+  width: 90vw;
+  max-width: 600px;
   padding: 50px 0;
   background-color: white;
   color: black;
